--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portafolio",
-  "homepage": "https://delfigica.github.io/Portafolio",
+  "homepage": "https://delfigica.github.io/Portafolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
